--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="res/layui/css/layui.css">
   <link rel="stylesheet" type="text/css" href="res/css/main.css">
+	<script src="https://cdn.staticfile.org/jquery/2.2.4/jquery.min.js"></script>
 <!--加载meta IE兼容文件-->
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -41,7 +42,7 @@
 
   <div class="content">
     <div class="cont w1000">
-      <div class="list-item">
+      <div class="list-item" id="record">
         <div class="item">
           <div class="layui-fluid">
             <div class="layui-row">
@@ -85,7 +86,7 @@
               </div>
               <div class="layui-col-xs12 layui-col-sm8 layui-col-md7">
                 <div class="item-cont">
-                  <a href="https://mp.weixin.qq.com/s/hCDbFQ4w-p0A0hrJ6si41Q"><h3 >数读 | 研究生“选导”大调查<button class="layui-btn layui-btn-danger new-icon" style="width: 80px;">2018-11-09</button></h3></a>
+                  <a href="https://mp.weixin.qq.com/s/hCDbFQ4w-p0A0hrJ6si41Q"><h3 >数读 | 研究生“选导”大调查 选入《中国研究生》杂志第170期<button class="layui-btn layui-btn-danger new-icon" style="width: 80px;">2018-11-09</button></h3></a>
                   <h5>《上海大学研究生报》实践</h5>
                   <p>秋季学期已经接近尾声，研究生新生也大多完成了“选导”大事，那么在这次选导大事件中，新生们呈现出了怎样的研究生群像？经历了怎样的波折？大家又希望遇见一位怎样的导师？
                   </p>
@@ -99,14 +100,15 @@
           <div class="layui-fluid">
             <div class="layui-row">
               <div class="layui-col-xs12 layui-col-sm4 layui-col-md5">
-                <div class="img"><img src="../res/img/sy_img4.jpg" alt=""></div>
+                <div class="img"><img src="res/img/20181214.jpg" alt=""></div>
               </div>
               <div class="layui-col-xs12 layui-col-sm8 layui-col-md7">
                 <div class="item-cont">
-                  <h3>空间立体效果图，完美呈现最终效果<button class="layui-btn layui-btn-danger new-icon">new</button></h3>
-                  <h5>设计文章</h5>
-                  <p>室内设计作为一门新兴的学科，尽管还只是近数十年的事，但是人们有意识地对自己生活、生产活动的室内进行安排布置，甚至美化装饰，赋予室内环境以所祈使的气氛，却早巳从人类文明伊始的时期就已存在</p>
-                  <a href="details.html" class="go-icon"></a>
+                  <a href="https://mp.weixin.qq.com/s/yHFA24t2fsipiuWCJ1fZHA"><h3 >数读|你的未来会怎样？<button class="layui-btn layui-btn-danger new-icon" style="width: 80px;">2018-12-14</button></h3></a>
+                  <h5>《上海大学研究生报》实践</h5>
+                  <p>进入研究生阶段，不仅意味着学历的提升，更多地是在提醒你“老大不小”了，该考虑考虑自己未来的方向了！你对自己未来的职业有怎样的期待和规划呢？你希望待在一座怎样的城市？希望拿到什么层次的薪水？你的能力是否支撑得起你的梦想？还是说，你抬起头却一片茫然……
+                  </p>
+                  <a href="https://mp.weixin.qq.com/s/yHFA24t2fsipiuWCJ1fZHA" class="go-icon"></a>
                 </div>
             </div>
             </div>
@@ -116,19 +118,111 @@
           <div class="layui-fluid">
             <div class="layui-row">
               <div class="layui-col-xs12 layui-col-sm4 layui-col-md5">
-                <div class="img"><img src="../res/img/sy_img5.jpg" alt=""></div>
+                <div class="img"><img src="res/img/20190510.jpg" alt=""></div>
               </div>
               <div class="layui-col-xs12 layui-col-sm8 layui-col-md7">
                 <div class="item-cont">
-                  <h3>空间立体效果图，完美呈现最终效果<button class="layui-btn layui-btn-danger new-icon">new</button></h3>
-                  <h5>设计文章</h5>
-                  <p>室内设计作为一门新兴的学科，尽管还只是近数十年的事，但是人们有意识地对自己生活、生产活动的室内进行安排布置，甚至美化装饰，赋予室内环境以所祈使的气氛，却早巳从人类文明伊始的时期就已存在</p>
-                  <a href="details.html" class="go-icon"></a>
+                  <a href="https://mp.weixin.qq.com/s/p9qhNTexfIgKxLjfGs-Gmw"><h3 >学为人师，情洒边疆|访上海大学材料学院教授李谋成<button class="layui-btn layui-btn-danger new-icon" style="width: 80px;">2019-05-10</button></h3></a>
+                  <h5>《上海大学研究生报》实践</h5>
+                  <p>古语有言“一日为师，终身为父”。师生之间是一种“相互关系”。高校教师如何成为一名优秀的“导师”？学生如何成为一名合格的“学生”？导师与学生间又该如何相处？在科研教学岗位上耕耘近二十年的李谋成教授为我们带来他多年积累的经验和感悟。
+                  </p>
+                  <a href="https://mp.weixin.qq.com/s/p9qhNTexfIgKxLjfGs-Gmw" class="go-icon"></a>
                 </div>
             </div>
             </div>
            </div>
         </div>
+				<div class="item">
+					<div class="layui-fluid">
+						<div class="layui-row">
+							<div class="layui-col-xs12 layui-col-sm4 layui-col-md5">
+								<div class="img"><img src="res/img/20200520.jpg" alt=""></div>
+							</div>
+							<div class="layui-col-xs12 layui-col-sm8 layui-col-md7">
+								<div class="item-cont">
+									<a href="https://mp.weixin.qq.com/s/B0A5t_WFHxze8E6rLQWWWw"><h3 >横刀跨马出江湖：山西大学2014级新闻班毕业两年记<button class="layui-btn layui-btn-danger new-icon" style="width: 80px;">2020-05-20</button></h3></a>
+									<h5>公众号“萤灜新语” 实践</h5>
+									<p>2020年5月，山西大学2016级毕业答辩结束。距2018年5月2014级答辩，已有两年；距我们拿着毕业证书各奔东西，也是两年。问一问东西，岿然不动在太原者有之，更多人选择了北上京津、南下湘粤、东进江浙、西突陕川。东西南北中的人儿，无论升学，还是工作，时机一到，一步踏出本科，迎面便是江湖。
+									</p>
+									<a href="https://mp.weixin.qq.com/s/B0A5t_WFHxze8E6rLQWWWw" class="go-icon"></a>
+								</div>
+						</div>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="layui-fluid">
+						<div class="layui-row">
+							<div class="layui-col-xs12 layui-col-sm4 layui-col-md5">
+								<div class="img"><img src="res/img/20150512.jpg" alt=""></div>
+							</div>
+							<div class="layui-col-xs12 layui-col-sm8 layui-col-md7">
+								<div class="item-cont">
+									<a href="https://mp.weixin.qq.com/s/HQtHbQ-7XI3zuM2eBuDVTA"><h3 >工程完没完？校门开不开？<button class="layui-btn layui-btn-danger new-icon" style="width: 80px;">2015-05-12</button></h3></a>
+									<h5>公众号“萤灜新语” 实践</h5>
+									<p>（萤瀛新语5月12日电）5月7日，笔者在“山西大学学生会”微信订阅号了解到“话说新校门修好了，你造吗？”的消息，但笔者今日发现：现在的新校门大门紧闭，工人们仍在脚手架上工作，维修工程仍在紧张进行。
+									</p>
+									<a href="https://mp.weixin.qq.com/s/HQtHbQ-7XI3zuM2eBuDVTA" class="go-icon"></a>
+								</div>
+						</div>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="layui-fluid">
+						<div class="layui-row">
+							<div class="layui-col-xs12 layui-col-sm4 layui-col-md5">
+								<div class="img"><img src="res/img/20151114.jpg" alt=""></div>
+							</div>
+							<div class="layui-col-xs12 layui-col-sm8 layui-col-md7">
+								<div class="item-cont">
+									<a href="https://mp.weixin.qq.com/s/fnd0QH904FH-ic15iFUleQ"><h3 >PARIS，让IS倒下！<button class="layui-btn layui-btn-danger new-icon" style="width: 80px;">2015-11-14</button></h3></a>
+									<h5>公众号“萤灜新语” 实践</h5>
+									<p>法国当地时间11月13日晚上，巴黎市中心一餐馆和法兰西球场附近等多处发生枪击和爆炸事件，截至目前已确认造成153人死亡，伤亡人数仍在不断上升。法国总统奥朗德宣布全国最高级别反恐戒严，全国宵禁，交通戒严，法国全国国境关闭。这是自9.11以来，首次有世界主要大国因恐怖主义行动而采取如此严厉的紧急措施。
+									</p>
+									<a href="https://mp.weixin.qq.com/s/fnd0QH904FH-ic15iFUleQ" class="go-icon"></a>
+								</div>
+						</div>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="layui-fluid">
+						<div class="layui-row">
+							<div class="layui-col-xs12 layui-col-sm4 layui-col-md5">
+								<div class="img"><img src="res/img/20180706.jpg" alt=""></div>
+							</div>
+							<div class="layui-col-xs12 layui-col-sm8 layui-col-md7">
+								<div class="item-cont">
+									<a href="https://mp.weixin.qq.com/s/tFW9bo52ELaM8QhT9ek-yg"><h3 >4年了，衢二中食堂的味道一直忘不掉<button class="layui-btn layui-btn-danger new-icon" style="width: 80px;">2018-07-06</button></h3></a>
+									<h5>饕餮文化传播工作室实习</h5>
+									<p>有人说怀念是对现状的不满 不如说怀念是对时间的忽视 毕业四年，衢州二中的味道仍萦绕 母校的影响如细雨如线缕 密密匝匝、不觉亦不绝……
+									</p>
+									<a href="https://mp.weixin.qq.com/s/tFW9bo52ELaM8QhT9ek-yg" class="go-icon"></a>
+								</div>
+						</div>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="layui-fluid">
+						<div class="layui-row">
+							<div class="layui-col-xs12 layui-col-sm4 layui-col-md5">
+								<div class="img"><img src="res/img/20180729.jpg" alt=""></div>
+							</div>
+							<div class="layui-col-xs12 layui-col-sm8 layui-col-md7">
+								<div class="item-cont">
+									<a href="https://mp.weixin.qq.com/s/EWHZtRQYozYx1iYtKso_xQ"><h3 >女护士的制服诱惑，了解一下？<button class="layui-btn layui-btn-danger new-icon" style="width: 80px;">2018-07-29</button></h3></a>
+									<h5>饕餮文化传播工作室实习</h5>
+									<p>护士服、方领衬衫、一步裙、西装裤……平时是一本正经的工作装，地地道道的医院女护士。下班后则换上曲裾、直裾、襦裙、袍衫、褙子、深衣、玄端……化身汉服美女子。
+									</p>
+									<a href="https://mp.weixin.qq.com/s/EWHZtRQYozYx1iYtKso_xQ" class="go-icon"></a>
+								</div>
+						</div>
+						</div>
+					</div>
+				</div>
+				
       </div>
       <div id="demo" style="text-align: center;"></div>
     </div>
@@ -136,32 +230,81 @@
 
   <div class="footer-wrap">
     <div class="footer w1000">
-      <div class="qrcode">
-        <img src="../res/img/erweima.jpg">
-      </div>
       <div class="practice-mode">
-        <img src="../res/img/down_img.jpg">
         <div class="text">
-          <h4 class="title">我的联系方式</h4>
-          <p>微信<span class="WeChat">1234567890</span></p>
-          <p>手机<span class="iphone">1234567890</span></p>
-          <p>邮箱<span class="email">1234567890@qq.com</span></p>
+          <h4 class="title">联系方式|手机：</h4>
         </div>
       </div>
     </div>
   </div>
   <script type="text/javascript" src="res/layui/layui.js"></script>
   <script type="text/javascript">
-    layui.config({
+    /* layui.config({
       base: 'res/js/util/'
     }).use(['element','laypage','jquery','menu'],function(){
       element = layui.element,laypage = layui.laypage,$ = layui.$,menu = layui.menu;
       laypage.render({
         elem: 'demo'
-        ,count: 70 //数据总数，从服务端得到
+        ,count: 30 //数据总数，从服务端得到
       });
       menu.init();
-    })
+    }) */
+		$(function(){
+    /*静态分页*/
+    Paging(1); 
+}) 
+
+function Paging(index){
+    var totalPage = $('#record').children().length; //总条数  
+    var pageSize = 5;//每页显示条数      
+    var pageNumber = Math.ceil(totalPage/pageSize); //总页数
+    var currentPage = index;//当前页数
+    var start_row = (currentPage-1)*pageSize;//开始显示的行
+    var end_row = currentPage*pageSize;//结束显示的行
+          end_row = (end_row > totalPage) ? totalPage : end_row;
+    for(var i=0;i<totalPage;i++){
+        if(i>=start_row && i<end_row){
+            $('#record').children().eq(i).attr("style","display:");   
+        }else {
+            $('#record').children().eq(i).attr("style","display:none"); 
+        }
+    }    
+    var pageHTML = '';
+        pageHTML += '<span style="margin-right:10px;">共'+totalPage+'条 </span>';     
+        pageHTML += '<a class="p_first" href="javascript:Paging(1)" title="首页">首页 </a>';  
+        var up =parseInt(currentPage)-1;
+        if(up<1){up =1;}
+        pageHTML += '<a class="p_prev" href="javascript:Paging('+up+')" title="上一页"> 上一页 </a>';
+        pageHTML+="<span>"+currentPage+"/"+pageNumber+" </span>";         
+
+    var next =parseInt(currentPage)+1;
+        if(next >pageNumber){ next = pageNumber ;}
+        pageHTML += '<a class="p_next js_page" href="javascript:Paging('+next+')" title="下一页">下一页 </a>';        
+        pageHTML += '<a class="p_last js_page" href="javascript:Paging('+pageNumber+')" title="尾页"> 尾页</a>';    
+        pageHTML += '<a οnclick="showAll()" title="显示全部" style="margin-left:10px;cursor:pointer;">显示全部</a>';          
+    if(totalPage == 0){
+        $("#demo").html('');   
+    }else {
+        $("#demo").html(pageHTML);
+    }
+ }    
+
+  /*显示全部*/
+function  showAll(){  
+    for(var i=0;i<$('#record').children().length;i++){
+        $('#record').children().eq(i).attr("style","display:");   
+    }  
+     $("#demo").html(
+             '<span style="margin-right:8px;">共'+$('#record').children().length+'条</span>'+
+             '<a οnclick="showPage()" title="分页显示" style="cursor:pointer;">分页显示</a>');   
+}
+  /*分页显示*/
+function showPage(){  
+    Paging(1)  
+    $('body,html').animate({scrollTop:0},100); //返回顶部
+}
+
+
   </script>
 </body>
 </html>
