--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
     </h1>
     <div class="nav">
       <a href="index.html" class="active">文章</a>
+			<a href="guidang.html">归档</a>
       <a href="album.html">相册</a>
       <a href="about.html">关于</a>
     </div>
     <ul class="layui-nav header-down-nav">
       <li class="layui-nav-item"><a href="index.html" class="active">文章</a></li>
+			<li class="layui-nav-item"><a href="guidang.html">归档</a></li>
       <li class="layui-nav-item"><a href="album.html">相册</a></li>
       <li class="layui-nav-item"><a href="about.html">关于</a></li>
     </ul>
@@ -47,19 +49,36 @@
           <div class="layui-fluid">
             <div class="layui-row">
               <div class="layui-col-xs12 layui-col-sm4 layui-col-md5">
-                <div class="img"><img src="res/img/20190724.jpg" alt=""></div>
+                <div class="img"><img src="res/img/20191024.jpg" alt=""></div>
               </div>
               <div class="layui-col-xs12 layui-col-sm8 layui-col-md7">
                 <div class="item-cont">
-									<a href="https://web.shobserver.com/wx/detail.do?id=165421&time=1563971015146&from=singlemessage&isappinstalled=0"><h3 >别再拿来华留学教育支出说事了！<button class="layui-btn layui-btn-danger new-icon" style="width: 80px;">2019-07-24</button></h3></a>
+									<a href="https://www.shobserver.com/news/detail?id=184125"><h3 >《2020营商环境报告》数据详解：中国为什么进步这么快<button class="layui-btn layui-btn-danger new-icon" style="width: 80px;">2019-07-24</button></h3></a>
                   <h5>《解放日报》数据新闻部实习</h5>
-                  <p>教育部2018年决算报告新近出炉，其中用于来华留学教育方面的支出为33.83亿元，同期小学教育支出6.45亿元，高中教育支出22.86亿元，因山东大学“学伴制度”事件，有关来华留学支出也受到普遍关注。为何决算报告中留学教育方面的支出高于小学与高中教育支出？各个大学用于外国学生来华留学教育的支出到底怎么花的？</p>
-                  <a href="https://web.shobserver.com/wx/detail.do?id=165421&time=1563971015146&from=singlemessage&isappinstalled=0" class="go-icon"></a>
+                  <p>在世界银行于10月24日上午发布的《2020营商环境报告》中，中国位列第31名。在去年由第78位提升至第46位之后，中国又往前迈进了15位。而在2015年，中国的排名还是第90位。</p>
+                  <a href="https://www.shobserver.com/news/detail?id=184125" class="go-icon"></a>
                 </div>
             </div>
             </div>
            </div>
         </div>
+				<div class="item">
+					<div class="layui-fluid">
+						<div class="layui-row">
+							<div class="layui-col-xs12 layui-col-sm4 layui-col-md5">
+								<div class="img"><img src="res/img/20190724.jpg" alt=""></div>
+							</div>
+							<div class="layui-col-xs12 layui-col-sm8 layui-col-md7">
+								<div class="item-cont">
+									<a href="https://web.shobserver.com/wx/detail.do?id=165421&time=1563971015146&from=singlemessage&isappinstalled=0"><h3 >别再拿来华留学教育支出说事了！<button class="layui-btn layui-btn-danger new-icon" style="width: 80px;">2019-07-24</button></h3></a>
+									<h5>《解放日报》数据新闻部实习</h5>
+									<p>教育部2018年决算报告新近出炉，其中用于来华留学教育方面的支出为33.83亿元，同期小学教育支出6.45亿元，高中教育支出22.86亿元，因山东大学“学伴制度”事件，有关来华留学支出也受到普遍关注。为何决算报告中留学教育方面的支出高于小学与高中教育支出？各个大学用于外国学生来华留学教育的支出到底怎么花的？</p>
+									<a href="https://web.shobserver.com/wx/detail.do?id=165421&time=1563971015146&from=singlemessage&isappinstalled=0" class="go-icon"></a>
+								</div>
+						</div>
+						</div>
+					</div>
+				</div>
         <div class="item">
           <div class="layui-fluid">
             <div class="layui-row">
@@ -78,6 +97,43 @@
             </div>
            </div>
         </div>
+				<div class="item">
+				          <div class="layui-fluid">
+				            <div class="layui-row">
+				              <div class="layui-col-xs12 layui-col-sm4 layui-col-md5">
+				                <div class="img"><img src="res/img/20190616.jpg" alt=""></div>
+				              </div>
+				              <div class="layui-col-xs12 layui-col-sm8 layui-col-md7">
+				                <div class="item-cont">
+				                  <a href="https://www.shobserver.com/news/detail?id=157717"><h3 >来看看这全球15个城市的垃圾分类图标，哪个最好懂？<button class="layui-btn layui-btn-danger new-icon" style="width: 80px;">2019-06-16</button></h3></a>
+				                  <h5>《解放日报》数据新闻部实习</h5>
+				                  <p>这两天被垃圾分类的示意图刷屏了？“干垃圾不是‘干’的，湿不是‘湿’的。“猪能吃的是湿垃圾，猪不能吃的是干垃圾，猪吃了会死的是有害垃圾，可以卖出去换猪的叫可回收垃圾。”……大家开足了脑洞去理解和记忆垃圾分类到底怎么分，为什么这么分。
+				</p>
+				                  <a href="https://www.shobserver.com/news/detail?id=157717" class="go-icon"></a>
+				                </div>
+						</div>
+						</div>
+					 </div>
+				</div>
+				<div class="item">
+									<div class="layui-fluid">
+										<div class="layui-row">
+											<div class="layui-col-xs12 layui-col-sm4 layui-col-md5">
+												<div class="img"><img src="res/img/20190814.jpg" alt=""></div>
+											</div>
+											<div class="layui-col-xs12 layui-col-sm8 layui-col-md7">
+												<div class="item-cont">
+													<a href="https://www.shobserver.com/news/detail?id=169582"><h3 >香港机场连续两日取消航班，一个国际超大枢纽机场瘫痪的后果有多严重<button class="layui-btn layui-btn-danger new-icon" style="width: 80px;">2019-08-14</button></h3></a>
+													<h5>《解放日报》数据新闻部实习</h5>
+													<p>这两天被垃圾分类的示意图刷屏了？“干垃圾不是‘干’的，湿不是‘湿’的。“猪能吃的是湿垃圾，猪不能吃的是干垃圾，猪吃了会死的是有害垃圾，可以卖出去换猪的叫可回收垃圾。”……大家开足了脑洞去理解和记忆垃圾分类到底怎么分，为什么这么分。
+				</p>
+													<a href="https://www.shobserver.com/news/detail?id=169582" class="go-icon"></a>
+												</div>
+						</div>
+						</div>
+					</div>
+				</div>
+				
         <div class="item">
           <div class="layui-fluid">
             <div class="layui-row">
@@ -271,17 +327,17 @@ function Paging(index){
     }    
     var pageHTML = '';
         pageHTML += '<span style="margin-right:10px;">共'+totalPage+'条 </span>';     
-        pageHTML += '<a class="p_first" href="javascript:Paging(1)" title="首页">首页 </a>';  
+        pageHTML += '<a class="p_first" href="javascript:Paging(1)" title="首页">首页  </a>';  
         var up =parseInt(currentPage)-1;
         if(up<1){up =1;}
-        pageHTML += '<a class="p_prev" href="javascript:Paging('+up+')" title="上一页"> 上一页 </a>';
-        pageHTML+="<span>"+currentPage+"/"+pageNumber+" </span>";         
+        pageHTML += '<a class="p_prev" href="javascript:Paging('+up+')" title="上一页"> 上一页  </a>';
+        pageHTML+="<span>"+currentPage+"/"+pageNumber+"  </span>";         
 
     var next =parseInt(currentPage)+1;
         if(next >pageNumber){ next = pageNumber ;}
-        pageHTML += '<a class="p_next js_page" href="javascript:Paging('+next+')" title="下一页">下一页 </a>';        
-        pageHTML += '<a class="p_last js_page" href="javascript:Paging('+pageNumber+')" title="尾页"> 尾页</a>';    
-        pageHTML += '<a οnclick="showAll()" title="显示全部" style="margin-left:10px;cursor:pointer;">显示全部</a>';          
+        pageHTML += '<a class="p_next js_page" href="javascript:Paging('+next+')" title="下一页">下一页  </a>';        
+        pageHTML += '<a class="p_last js_page" href="javascript:Paging('+pageNumber+')" title="尾页">  尾页</a>';    
+        /* pageHTML += '<a οnclick="showAll()" title="显示全部" style="margin-left:10px;cursor:pointer;">显示全部</a>';  */        
     if(totalPage == 0){
         $("#demo").html('');   
     }else {
