--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <title>Document</title>
+  <title>封寒冰的博客</title>
   <link rel="stylesheet" type="text/css" href="res/layui/css/layui.css">
   <link rel="stylesheet" type="text/css" href="res/css/main.css">
 	<script src="https://cdn.staticfile.org/jquery/2.2.4/jquery.min.js"></script>
