--- a/guidang.html
+++ b/guidang.html
@@ -52,10 +52,36 @@
 							<h3>2020年</h3>
 							<a href="https://mp.weixin.qq.com/s/B0A5t_WFHxze8E6rLQWWWw">
 								<span>2020-05-20 | 横刀跨马出江湖：山西大学2014级新闻班毕业两年记</span></a><br/><br/>
+							<a href="res/财新传媒/【研报精华】制造业疫情敞口大 苏浙粤城农商行不良承压.docx">
+								<span>2020-04-06 | 【研报精华】制造业疫情敞口大 苏浙粤城农商行不良承压</span></a><br/><br/>
+							<a href="res/财新传媒/【债市周报】特别国债引发流动性担忧 货币政策仍有放松空间.docx">
+								<span>2020-03-31 | 【债市周报】特别国债引发流动性担忧 货币政策仍有放松空间</span></a><br/><br/>
+							<a href="res/财新传媒/【研报精华】海螺水泥高增长遇挑战：下半年需求能否快速补位？.docx">
+								<span>2020-03-30 | 【研报精华】海螺水泥高增长遇挑战：下半年需求能否快速补位？</span></a><br/><br/>
+							<a href="res/财新传媒/【债市周报】资金面持续宽松 债市冲高回落.docx">
+								<span>2020-03-18 | 【债市周报】资金面持续宽松 债市冲高回落</span></a><br/><br/>
+							<a href="res/财新传媒/【债市周报】资金流动性充裕 海外疫情提振国内债市.docx">
+								<span>2020-03-03 | 【债市周报】资金流动性充裕 海外疫情提振国内债市</span></a><br/><br/>
+							<a href="res/财新传媒/【债市周报】资金面持续宽松 收益率曲线陡峭化.docx">
+								<span>2020-02-18 | 【债市周报】资金面持续宽松 收益率曲线陡峭化</span></a><br/><br/>
+							<a href="res/财新传媒/【债市周报】资金面持续宽松 新冠疫情成债市主线.docx">
+								<span>2020-02-04 | 【债市周报】资金面持续宽松 新冠疫情成债市主线</span></a><br/><br/>
+							<a href="res/财新传媒/外资“大拿”新年如何投资 分散投资应对“不确定”环境.docx">
+								<span>2020-01-17 | 外资“大拿”新年如何投资 分散投资应对“不确定”环境</span></a><br/><br/>
+							<a href="res/财新传媒/【债市周报】货币利率预期上行 债市走强或难持续.docx">
+								<span>2020-01-14 | 【债市周报】货币利率预期上行 债市走强或难持续</span></a><br/><br/>
 						</p>
 						
             <p>
               <h3>2019年</h3>
+							<a href="res/财新传媒/【债市周报】短期理财新规冲击债市 收益率曲线陡峭化.docx">
+								<span>2019-12-31 | 【债市周报】短期理财新规冲击债市 收益率曲线陡峭化</span></a><br/><br/>
+							<a href="res/财新传媒/【研报精华】酒鬼酒风波再起 甜蜜素会否重演塑化剂事件.docx">
+								<span>2019-12-25 | 【研报精华】酒鬼酒风波再起 甜蜜素会否重演塑化剂事件</span></a><br/><br/>
+							<a href="res/财新传媒/【债市周报】货币政策整体稳健 债市对利空消息反应钝化.docx">
+								<span>2019-12-18 | 【债市周报】货币政策整体稳健 债市对利空消息反应钝化</span></a><br/><br/>
+							<a href="res/财新传媒/科创板新股现首日破发 破发比例将成关键指标.docx">
+								<span>2019-12-05 | 科创板新股现首日破发 破发比例将成关键指标</span></a><br/><br/>
 							<a href="https://www.shobserver.com/news/detail?id=184125">
 								<span>2019-10-24 | 《2020营商环境报告》数据详解：中国为什么进步这么快</span></a><br/><br/>
 							<a href="https://web.shobserver.com/wx/detail.do?id=168801&time=1565364514153&from=singlemessage&isappinstalled=0">
