--- a/guidang.html
+++ b/guidang.html
@@ -44,7 +44,7 @@
     <div class="w1000">
       <div class="item info">
         <div class="title">
-          <h3>关于</h3>
+          <h3>时间线</h3>
         </div>
         <div class="cont">
           <div class="per-info">
