--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       <a href="album.html">相册</a>
       <a href="about.html">关于</a>
     </div>
-    <ul class="layui-nav header-down-nav">
+    <!-- <ul class="layui-nav header-down-nav">
       <li class="layui-nav-item"><a href="index.html" class="active">文章</a></li>
 			<li class="layui-nav-item"><a href="guidang.html">归档</a></li>
       <li class="layui-nav-item"><a href="album.html">相册</a></li>
       <li class="layui-nav-item"><a href="about.html">关于</a></li>
-    </ul>
+    </ul> -->
     <p class="welcome-text">
       欢迎来到<span class="name">封寒冰</span>的博客~
     </p>
