--- a/guidang.html
+++ b/guidang.html
@@ -27,13 +27,13 @@
     		<a href="index.html">文章</a>
     		<a href="guidang.html" class="active">归档</a>
     		<a href="album.html">相册</a>
-    		<a href="about.html">关于</a>
+    		<!-- <a href="about.html">关于</a> -->
     	</div>
     	<ul class="layui-nav header-down-nav">
     		<li class="layui-nav-item"><a href="index.html">文章</a></li>
     		<li class="layui-nav-item"><a href="guidang.html" class="active">归档</a></li>
     		<li class="layui-nav-item"><a href="album.html">相册</a></li>
-    		<li class="layui-nav-item"><a href="about.html">关于</a></li>
+    		<!-- <li class="layui-nav-item"><a href="about.html">关于</a></li> -->
     	</ul>
     	<p class="welcome-text">
     		欢迎来到<span class="name">封寒冰</span>的博客~
