--- a/about.html
+++ b/about.html
@@ -69,7 +69,12 @@
     </div>
   <script type="text/javascript" src="../res/layui/layui.js"></script>
   <script type="text/javascript">
-    
+    layui.config({
+      base: 'res/js/util/'
+    }).use(['element','form','layer','menu'],function(){
+      element = layui.element,form = layui.form,layer = layui.layer,menu = layui.menu;
+      menu.init();
+    })
   </script>
 </body>
 </html>
