--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       <a href="index.html" class="active">文章</a>
 			<a href="guidang.html">归档</a>
       <a href="album.html">相册</a>
-      <!-- <a href="about.html">关于</a> -->
+      <a href="about.html">关于</a>
     </div>
     <ul class="layui-nav header-down-nav">
       <li class="layui-nav-item"><a href="index.html" class="active">文章</a></li>
 			<li class="layui-nav-item"><a href="guidang.html">归档</a></li>
       <li class="layui-nav-item"><a href="album.html">相册</a></li>
-      <!-- <li class="layui-nav-item"><a href="about.html">关于</a></li> -->
+      <li class="layui-nav-item"><a href="about.html">关于</a></li>
     </ul>
     <p class="welcome-text">
       欢迎来到<span class="name">封寒冰</span>的博客~
@@ -531,16 +531,13 @@
   </div>
   <script type="text/javascript" src="res/layui/layui.js"></script>
   <script type="text/javascript">
-    /* layui.config({
-      base: 'res/js/util/'
-    }).use(['element','laypage','jquery','menu'],function(){
-      element = layui.element,laypage = layui.laypage,$ = layui.$,menu = layui.menu;
-      laypage.render({
-        elem: 'demo'
-        ,count: 30 //数据总数，从服务端得到
-      });
-      menu.init();
-    }) */
+    layui.config({
+    	base: 'res/js/util/'
+    }).use(['element','form','layer','menu'],function(){
+    	element = layui.element,form = layui.form,layer = layui.layer,menu = layui.menu;
+    	menu.init();
+    })
+		
 		$(function(){
     /*静态分页*/
     Paging(1); 
