--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
     }).use(['element','form','layer','menu'],function(){
     	element = layui.element,form = layui.form,layer = layui.layer,menu = layui.menu;
     	menu.init();
+			menu.submit();
     })
 		
 		$(function(){
