--- a/about.html
+++ b/about.html
@@ -74,6 +74,7 @@
     }).use(['element','form','layer','menu'],function(){
       element = layui.element,form = layui.form,layer = layui.layer,menu = layui.menu;
       menu.init();
+      menu.submit();
     })
   </script>
 </body>
