--- a/guidang.html
+++ b/guidang.html
@@ -138,6 +138,7 @@
    }).use(['element','form','layer','menu'],function(){
    	element = layui.element,form = layui.form,layer = layui.layer,menu = layui.menu;
    	menu.init();
+   	menu.submit();
    })
   </script>
 </body>
