--- a/guidang.html
+++ b/guidang.html
@@ -138,8 +138,11 @@
    }).use(['element','form','layer','menu'],function(){
    	element = layui.element,form = layui.form,layer = layui.layer,menu = layui.menu;
    	menu.init();
-   	menu.submit();
    })
+	 $(function(){
+	 	menu.init();
+	 }) 
+
   </script>
 </body>
 </html>
