--- a/index.html
+++ b/index.html
@@ -536,12 +536,12 @@
     }).use(['element','form','layer','menu'],function(){
     	element = layui.element,form = layui.form,layer = layui.layer,menu = layui.menu;
     	menu.init();
-			menu.submit();
     })
 		
 		$(function(){
     /*静态分页*/
     Paging(1); 
+		menu.init();
 }) 
 
 function Paging(index){
