--- a/album.html
+++ b/album.html
@@ -132,8 +132,10 @@
    }).use(['element','form','layer','menu'],function(){
    	element = layui.element,form = layui.form,layer = layui.layer,menu = layui.menu;
    	menu.init();
-   	menu.submit();
    })
+	 $(function(){
+	 		menu.init();
+	 }) 
   </script>
 </body>
 </html>
