--- a/album.html
+++ b/album.html
@@ -125,17 +125,16 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="../res/layui/layui.js"></script>
+  <script type="text/javascript" src="res/layui/layui.js"></script>
   <script type="text/javascript">
    layui.config({
    	base: 'res/js/util/'
    }).use(['element','form','layer','menu'],function(){
    	element = layui.element,form = layui.form,layer = layui.layer,menu = layui.menu;
    	menu.init();
+		menu.submit();
    })
-	 $(function(){
-	 		menu.init();
-	 }) 
+	
   </script>
 </body>
 </html>
