--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>封寒冰的博客</title>
   <link rel="stylesheet" type="text/css" href="res/layui/css/layui.css">
   <link rel="stylesheet" type="text/css" href="res/css/main.css">
-	<script src="https://cdn.staticfile.org/jquery/2.2.4/jquery.min.js"></script>
+	<script src="res/jquery.min.js"></script>
 <!--加载meta IE兼容文件-->
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -541,7 +541,6 @@
 		$(function(){
     /*静态分页*/
     Paging(1); 
-		menu.init();
 }) 
 
 function Paging(index){
