--- a/about.html
+++ b/about.html
@@ -69,6 +69,7 @@
     </div>
   <script type="text/javascript" src="res/layui/layui.js"></script>
   <script type="text/javascript">
+		$(function(){
     layui.config({
       base: 'res/js/util/'
     }).use(['element','form','layer','menu'],function(){
@@ -76,6 +77,7 @@
       menu.init();
 			menu.submit();
     })
+		}
   </script>
 </body>
 </html>
