--- a/guidang.html
+++ b/guidang.html
@@ -133,6 +133,7 @@
     </div>
   <script type="text/javascript" src="res/layui/layui.js"></script>
   <script type="text/javascript">
+		$(function(){
    layui.config({
    	base: 'res/js/util/'
    }).use(['element','form','layer','menu'],function(){
@@ -140,6 +141,7 @@
    	menu.init();
 		menu.submit();
    })
+	 }
 
   </script>
 </body>
