--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Start Bootstrap</span>
+        <span class="d-block d-lg-none">封寒冰展示空间</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="vendor/profile.jpg" alt="">
         </span>
@@ -88,8 +88,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="shangda">
         <div class="my-auto">
-          <h2 class="mb-5">上海大学研究生报</h2>
-					
+          <font size="7" class="mb-5"><b>上海大学研究生报</b></font><br/><br/>
 					<div class="resume-item d-flex flex-column flex-md-row mb-5">
 						<div class="resume-content mr-auto">
 							<a href="https://mp.weixin.qq.com/s/hCDbFQ4w-p0A0hrJ6si41Q"><h3 class="mb-0">数读 | 研究生“选导”大调查 选入《中国研究生》杂志第170期</h3></a>
